# rs-img2sz-wasm

./: Cargo.toml  README.md  example.sh  opt.sh  rs_img2sz_wasm.wasm  test.mjs  wasm.sh
src/: lib.rs
