[package]
name = "rs-img2sz-wasm"
version = "0.1.0"
edition = "2024"

exclude = [
]

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.imagesize]
version = "0.14"
default-features = false
features = [
    "bmp",
    "exr",
    "gif",
    "heif",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "psd",
    "tga",
    "tiff",
    "webp",
]
