[package]
name = "rs-img2sz-wasm"
version = "0.1.0"
edition = "2024"

description = "WebAssembly bindings to guess image width/height"
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-img2sz-wasm"
homepage = "https://github.com/takanoriyanagitani/rs-img2sz-wasm"
documentation = "https://docs.rs/rs-img2sz-wasm/latest"
keywords = ["image", "size", "wasm"]

exclude = [
    "opt.wasm",
    "rs_img2sz_wasm.wasm",
]

[lib]
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"

[profile.release-wasm]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.imagesize]
version = "0.14"
default-features = false
features = [
    "bmp",
    "exr",
    "gif",
    "heif",
    "ico",
    "jpeg",
    "png",
    "pnm",
    "psd",
    "tga",
    "tiff",
    "webp",
]
